# stock-market-sim

./: HANDOFF.md  README.md  docker-compose.yml  plan.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0122f5ddcf76_initial_schema.py  1db632346c68_add_lesson_quiz_json_and_scenario_json_.py  2fb78348b2c7_add_news_cache_and_sentiment_cache_.py  562057f41bfb_add_journal_entry_underlying_price_.py  aedddb4c97c3_add_lesson_walkthrough_json_column.py  b0650e681d86_chat_message_context_id_to_string.py
backend/app/: main.py  seed.py
backend/app/core/: config.py
backend/app/models/: __init__.py  chat_message.py  journal_entry.py  lesson.py  news_cache.py  portfolio.py  position.py  quote_cache.py  sentiment_cache.py  trade.py
backend/app/routers/: health.py  journal.py  lessons.py  news.py  options.py  portfolio.py  positions.py  symbol.py  trades.py  tutor.py
backend/app/schemas/: journal.py  lesson.py  news.py  options.py  portfolio.py  symbol.py  trading.py  tutor.py
backend/app/services/: market_data.py  news.py  options.py  pattern_descriptions.py  patterns.py  portfolio_service.py  trading.py  tutor_context.py
backend/app/services/ai_tutor/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: candlestick-chart.tsx  card-help.tsx  catalyst-panel.tsx  expiration-date-picker.tsx  journal-table.tsx  lesson-content.tsx  lesson-prompt.tsx  lesson-quiz.tsx  lesson-scenario.tsx  (+8 more)
(+26 files in other folders)
