[project]
name = "stock-market-sim-backend"
version = "0.1.0"
description = "Options & Stock Market Learning Simulator - FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "yfinance>=0.2.48",
    "pandas>=2.2",
    "pandas-ta-classic>=0.3",
    "google-genai>=1.0",
    "anthropic>=0.68",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
